# ray_tracer

./: Cargo.toml  README.MD
src/: color.rs  intersection.rs  light.rs  main.rs  material.rs  object.rs  ray.rs  scene.rs
src/object/: material.rs  plane.rs  sphere.rs
