[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Julian Viechter <jviechter@gmail.com>"]
edition = "2018"

[dependencies]
piston = "0.51.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.65.0"
piston2d-opengl_graphics = "0.72.0"
itertools = "0.9.0"
nalgebra = "0.21.1"
ncollide3d = "0.23.2"
image = "0.23.8"
rayon = "1.3.1"
rand = "0.7.3"